dataset1235/2025-2/1955397009/users/4151380891/executions/1107611404_1078076002.log
== RUN (2025-08-19 13:38:44)
-- CODE: 
x1 = " Ufam
print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = " Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = " Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:39:07)
-- CODE: 
x1 = " Ufam"
print(x1)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
